# ffmpeg-cpp

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  build-dependencies.bat  build-dependencies.sh  build-libraries.bat  build-libraries.sh  run-debug.sh
.github/workflows/: cmake.yml  linux_build_release.yml  windows_build_release.yml
examples/: CMakeLists.txt  decode_audio.cpp  decode_video.cpp  difference.cpp  encode_audio.cpp  encode_video.cpp  filtering_audio.cpp  filtering_video.cpp  print_info.cpp  remuxing.cpp
examples/demo/: GeneratedAudioSource.cpp  GeneratedAudioSource.h  GeneratedVideoSource.cpp  GeneratedVideoSource.h  demo.cpp
include/: FFmpegException.h  FrameContainer.h  Rational.h  Types.h  Utilities.h
include/Codecs/: Codec.h  VideoCodec.h
include/Demuxing/: AudioInputStream.h  InputStream.h  StreamData.h  VideoInputStream.h
include/Frame Sinks/: AudioEncoder.h  AudioFrameSink.h  Filter.h  FrameSink.h  OneInputFrameSink.h  VideoEncoder.h  VideoFrameSink.h
include/Frames/: Frame.h
include/Info/: ContainerInfo.h  VideoStreamInfo.h
include/Input Sources/: Demuxer.h  EncodedFileSource.h
include/Muxing/: AudioOutputStream.h  VideoOutputStream.h
scripts/: Dockerfile
source/ffmpeg-cpp/: CMakeLists.txt
source/ffmpeg-cpp/ffmpeg-cpp/Muxing/: OutputStream.cpp
src/: FFmpegException.cpp  FFmpegException.h  FrameContainer.cpp  Rational.cpp  Utilities.cpp  VideoFormatConverter.cpp  ffmpegcpp.h
src/Codecs/: AudioCodec.cpp  Codec.cpp  VideoCodec.cpp
src/Demuxing/: InputStream.cpp  VideoInputStream.cpp
src/Frame Sinks/: AudioEncoder.cpp  Filter.cpp  FrameSinkStream.cpp  OneInputFrameSink.cpp  VideoEncoder.cpp  VideoEncoder.h  VideoFilterInput.cpp
src/Frames/: Frame.cpp
src/Input Sources/: Demuxer.cpp  EncodedFileSource.cpp  EncodedFileSource.h  RawAudioDataSource.cpp  RawAudioDataSource.h  RawAudioFileSource.cpp  RawVideoDataSource.cpp  RawVideoDataSource.h  RawVideoFileSource.cpp
src/Muxing/: AudioOutputStream.cpp  AudioOutputStream.h  Muxer.cpp  Muxer.h  OutputStream.cpp  VideoOutputStream.cpp
test/: CMakeLists.txt  FrameContainer.test.cpp  Frames.test.cpp  Rational.test.cpp  Utilities.test.cpp  common.hpp
